# ReshadeZoom

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
plugin/: CMakeLists.txt  KeyData.h  main.cpp
shaders/: test.fx  zoomscope.fx
